Update exception message in bean definition layer